@@ -10,8 +10,8 @@ class RacingGameTest {
 
     @Test
     void startGame_NonMoveTest() {
-        Cars cars = new Cars("a,b");
-        RacingGame racingGame = new RacingGame(2, cars);
+        Cars cars = new Cars(List.of("a,b"));
+        RacingGame racingGame = new RacingGame(cars);
         racingGame.startGame(new NonMove());
         cars.getCarDTOs()
             .forEach(carDTO -> assertThat(carDTO.getPosition()).isEqualTo(0));
@@ -19,24 +19,39 @@ class RacingGameTest {
 
     @Test
     void startGame_MoveOneSpaceTest() {
-        Cars cars = new Cars("a,b");
-        List<List<CarDTO>> expected = Arrays.asList(
-            Arrays.asList(new CarDTO("a", 1), new CarDTO("b", 1)),
-            Arrays.asList(new CarDTO("a", 2), new CarDTO("b", 2)));
+        Cars cars = new Cars(List.of("a", "b"));
+        List<CarDTO> expected = Arrays.asList(new CarDTO("a", 1), new CarDTO("b", 1));
 
-        RacingGame racingGame = new RacingGame(2, cars);
-        List<List<CarDTO>> result = racingGame.startGame(new MoveOneSpace());
+        RacingGame racingGame = new RacingGame(cars);
+        List<CarDTO> result = racingGame.startGame(new MoveOneSpace());
 
         assertThat(result).isEqualTo(expected);
     }
 
     @Test
-    void getWinner_Test() {
-        Cars cars = new Cars("a,b");
-        RacingGame racingGame = new RacingGame(2, cars);
+    void getTwoWinner_Test() {
+        Cars cars = new Cars(List.of("a", "b"));
+
+        RacingGame racingGame = new RacingGame(cars);
         racingGame.startGame(new MoveOneSpace());
         List<CarDTO> winners = racingGame.getWinner();
-        assertThat(winners).hasSize(2);
+
+        assertThat(winners).containsExactly(
+            new CarDTO("a", 1),
+            new CarDTO("b", 1)
+        );
+    }
+
+    @Test
+    void getOneWinner_Test() {
+        Cars cars = new Cars(List.of("a", "b"));
+        CarDTO expected = new CarDTO("a", 1);
+
+        RacingGame racingGame = new RacingGame(cars);
+        racingGame.startGame(new MoveOddCase());
+        List<CarDTO> winners = racingGame.getWinner();
+
+        assertThat(winners).containsExactly(expected);
     }
 
 }
